Form Validation and other Future HTML5 Form Enhancements

--- a/Lesson11/Work/Lesson11.html
+++ b/Lesson11/Work/Lesson11.html
@@ -60,6 +60,8 @@
 		<p><label><span>autofocus: </span><input type="text" autofocus></label></p>
 		<p><label><span>pattern: </span><input type="text" pattern="^\d{5}(-\d{4})?$"></label>Hint: use a valid/invalid zip code</p>
 		<p><label><span>placeholder: </span><input type="text" placeholder="Hello World"></label></p>
+		<p><label><span>required: </span><input type="text" required></label></p>
+		<p><label><span>step: </span><input type="number" step="5"></label>Hint must be divisible by 5</p>
 		<p><button>Submit</button></p>
 
 	  </form>
